--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-qunit": "^1.2.0",
     "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-file-dependencies": "^1.0.2"
   }
 }
